--- a/contacto.html
+++ b/contacto.html
@@ -22,7 +22,7 @@
         <h1 class="title"><span class="color-icon"><i class="fas fa-laptop"></span></i> SystemSupport - Tu soporte técnico </h1>
     </div>
     <div class="logon-cont">
-        <img src="img/fondo3.jpg" alt="" width="500" height="500">
+        <img src="img/img/fondo3.jpg" alt="" width="500" height="500">
     </div>    
     <div class="navegacionbar">
             <li><a href="index.html">Inicio</a></li>
@@ -89,13 +89,13 @@
     
     <aside class="sidebar">
       <h3>Nuestros socios</h3>
-        <img src="img/fortinet.png" alt="Fortinet" width="300" height="200">
+        <img src="img/img/fortinet.png" alt="Fortinet" width="300" height="200">
         <br></br>
-        <img src="img/dell.png" alt="DELL" width="300" height="200">
+        <img src="img/img/dell.png" alt="DELL" width="300" height="200">
         <br></br>
-        <img src="img/amd.jpg" alt="AMD" width="300" height="200">
+        <img src="img/img/amd.jpg" alt="AMD" width="300" height="200">
         <br></br>
-        <img src="img/intel.png" alt="Intel" width="300" height="150">
+        <img src="img/img/intel.png" alt="Intel" width="300" height="150">
       </div>
     </aside>
 
