--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h1 class="title"><span class="color-icon"><i class="fas fa-laptop"></span></i> SystemSupport - Tu soporte técnico </h1>
     </div>
     <div class="logon-service">
-        <img src="img/fondo1.jpg" alt="">
+        <img src="img/img/fondo1.jpg" alt="">
     </div>    
     <div class="navegacionbar">
             <li><a href="index.html">Inicio</a></li>
@@ -45,7 +45,7 @@
             </p>
             <br></br>
         </article>
-        <img src="img/icon-comunicacion.jpg" width="600" height="300" class="responsive"></img>
+        <img src="img/img/icon-comunicacion.jpg" width="600" height="300" class="responsive"></img>
         <h2 class="servcom">SERVICIOS EN COMUNICACIONES</h2>
         <br></br>
         <article>
@@ -60,7 +60,7 @@
             </p>
             <br></br>
         </article>
-        <img src="img/icon-serviciosener.jpg" width="600" height="300" class="responsive"></img>
+        <img src="img/img/icon-serviciosener.jpg" width="600" height="300" class="responsive"></img>
         <h2 class="servener">SERVICIOS EN ENERGIAS RENOVABLES</h2>
         <br></br>
         <article>
@@ -72,7 +72,7 @@
         </p>
         <br></br>
         </article>
-        <img src="img/icon-pantallas.png" width="600" height="300" class="responsive"></img>
+        <img src="img/img/icon-pantallas.png" width="600" height="300" class="responsive"></img>
         <h2 class="servpant">SERVICIOS EN PANTALLAS INTERACTIVAS</h2>
         <br></br>
         <article>
@@ -88,13 +88,13 @@
 
     <aside class="sidebar">
         <h3>Nuestros socios</h3>
-        <img src="img/fortinet.png" alt="Fortinet" width="300" height="200">
+        <img src="img/img/fortinet.png" alt="Fortinet" width="300" height="200">
         <br></br>
-        <img src="img/dell.png" alt="DELL" width="300" height="200">
+        <img src="img/img/dell.png" alt="DELL" width="300" height="200">
         <br></br>
-        <img src="img/amd.jpg" alt="AMD" width="300" height="200">
+        <img src="img/img/amd.jpg" alt="AMD" width="300" height="200">
         <br></br>
-        <img src="img/intel.png" alt="Intel" width="300" height="200">
+        <img src="img/img/intel.png" alt="Intel" width="300" height="200">
     </aside>
 
 
