--- a/servicios.html
+++ b/servicios.html
@@ -14,38 +14,78 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 </head>
 
+
 <body>
 <section class="conteiner1">
     <div class="header">
         <h1 class="title"><span class="color-icon"><i class="fas fa-laptop"></span></i> SystemSupport - Tu soporte técnico </h1>
     </div>
-    <div class="logon">
-        <img src="img/img/fondo2.jpg" alt="" width="500" height="500">
+    <div class="logon-service">
+        <img src="img/img/fondo1.jpg" alt="">
     </div>    
     <div class="navegacionbar">
-            <li><a class="active" href="index.html">Inicio</a></li>
-            <li><a href="servicios.html">Servicios</a></li>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a class="active" href="servicios.html">Servicios</a></li>
             <li><a href="contacto.html">Contacto</a></li>
     </div>
     <main class="contenido">
         <h1 class="ml1">
             <span class="text-wrapper">
               <span class="line line1"></span>
-              <span class="letters"><h1>Bienvenidos....</h1></span>
+              <span class="letters">Servicios</span>
               <span class="line line2"></span>
             </span>
           </h1>
           <script src="js/letters.js"></script>
-    <article>
-        <h3 class="mision"> Nuestra mision...</h3>
+        <article>
+            <p>
+                Hoy en día los continuos avances tecnológicos hacen que sea imposible para muchas organizaciones contar con un equipo técnico capaz de desarrollar proyectos en las últimas tecnologías con unos costos razonables. Si a esto unimos la urgencia de la implementación y la tendencia cada vez mayor de optimizar los recursos de los departamentos de comunicaciones resulta vital contar con un proveedor que le garantice el éxito de sus proyectos.
+                <br></br>
+                Por estos motivos usted cuenta con DiracServices S.A. como socio tecnológico con un amplio porfolio de servicios, donde lo podemos asesorar en el análisis, diseño e implementación.     
+            </p>
+            <br></br>
+        </article>
+        <img src="img/img/icon-comunicacion.jpg" width="600" height="300" class="responsive"></img>
+        <h2 class="servcom">SERVICIOS EN COMUNICACIONES</h2>
         <br></br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos et nostrum, aliquam qui beatae possimus ut cum, vitae animi perferendis rem repellendus impedit quas voluptatem. Enim, nihil vel. Quia, deserunt.</p>
+        <article>
+            <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut ipsum libero vel quibusdam praesentium eligendi, exercitationem officiis incidunt eveniet totam iste laborum ab possimus quaerat impedit doloribus! Nulla, assumenda quaerat?
+                <br></br>
+                <li>Soporte Técnico de Tier 1 y 2</li>
+                <li>Mantenimiento preventivo y correctivo</li>
+                <li>Diagnóstico y corrección de fallas por evento</li>
+                <li>Migraciones</li>
+                <li>Cableado Estructurado</li>
+                <li>Desarrollo de Proyectos</li>             
+            </p>
+            <br></br>
+        </article>
+        <img src="img/img/icon-serviciosener.jpg" width="600" height="300" class="responsive"></img>
+        <h2 class="servener">SERVICIOS EN ENERGIAS RENOVABLES</h2>
         <br></br>
-        <p>Maecenas pharetra pretium quam ut posuere. Quisque luctus sem purus. Phasellus vel nibh sed erat interdum placerat eget a dui. Vivamus viverra pharetra congue. Sed pretium mi eu dui congue pulvinar. Donec felis risus, malesuada quis tristique faucibus, vestibulum non urna. Fusce nec orci pulvinar, blandit velit quis, finibus neque. Mauris malesuada metus eget ornare pellentesque. Nunc pharetra ante eget ullamcorper finibus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla maximus a dolor non condimentum. Suspendisse convallis ullamcorper justo.</p>
+        <article>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, et nostrum consectetur omnis esse quos corporis aliquam dolor dolorum ipsam ex repellat iusto id? Veniam, eius explicabo? Pariatur, a veritatis.
+            <br></br>
+            <li>Asesoramiento en proyectos</li>
+            <li>Mediciones de consumo</li>
+            <li>Instalaciones</li>
+        </p>
         <br></br>
-        <p>Nullam ut erat sit amet elit ultricies tempor vel eget magna. Vivamus vitae diam purus. Fusce semper nisl a nulla congue feugiat. Maecenas et tincidunt felis, dapibus rhoncus sapien. Maecenas tortor tortor, sagittis ac mattis sed, ullamcorper et orci. Pellentesque quis mollis massa. Donec lacinia turpis sapien, eu tincidunt dui rutrum elementum. Maecenas dictum et metus eget aliquam. Sed imperdiet lacinia vulputate. Vivamus mauris arcu, faucibus pulvinar laoreet sed, scelerisque et dui.</p>
+        </article>
+        <img src="img/img/icon-pantallas.png" width="600" height="300" class="responsive"></img>
+        <h2 class="servpant">SERVICIOS EN PANTALLAS INTERACTIVAS</h2>
+        <br></br>
+        <article>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias animi omnis culpa non excepturi cum ipsam laudantium harum quam dolor. Iure deleniti praesentium voluptatum nisi voluptatem minus architecto, doloremque excepturi?
+        <br></br>
+        <li>Capacitación de usuarios</li>
+        <li>Servicio post venta</li>
+    </p>
     </article>
     </main>
+
+
+
     <aside class="sidebar">
         <h3>Nuestros socios</h3>
         <img src="img/img/fortinet.png" alt="Fortinet" width="300" height="200">
@@ -55,31 +95,17 @@
         <img src="img/img/amd.jpg" alt="AMD" width="300" height="200">
         <br></br>
         <img src="img/img/intel.png" alt="Intel" width="300" height="200">
-
-
     </aside>
-    <div class="widget-1">
-        <div class="maps">
-            <p>Lavalle 899</p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d821.0169206155089!2d-58.3812771707397!3d-34.602449994899196!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccacf2c383417%3A0xf1d26adec2f52d11!2sLavalle%20989%2C%20C1047%20AAS%2C%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1635627095326!5m2!1ses-419!2sar" width="300" height="150" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        </div>
-    </div>
 
-    <div class="widget-2">
-        <div class="Video">
-            <p>Importancia del mantenimiento de computadoras</p>
-            <iframe width="300" height="150" src="https://www.youtube.com/watch?v=tF-wkzh3hk8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
-    </div>
 
-    
+
     <footer class="footer">
         <a href="https://www.instagram.com/martingardella_/" class="fa fa-instagram"></a> 
         <p>Diseñado por Martin Gardella - DiracServices</p>
     </footer>
-
-
 </section>
     
+
+
 </body>
 </html>
