--- a/servicios.html
+++ b/servicios.html
@@ -41,7 +41,7 @@
             <p>
                 Hoy en día los continuos avances tecnológicos hacen que sea imposible para muchas organizaciones contar con un equipo técnico capaz de desarrollar proyectos en las últimas tecnologías con unos costos razonables. Si a esto unimos la urgencia de la implementación y la tendencia cada vez mayor de optimizar los recursos de los departamentos de comunicaciones resulta vital contar con un proveedor que le garantice el éxito de sus proyectos.
                 <br></br>
-                Por estos motivos usted cuenta con DiracServices S.A. como socio tecnológico con un amplio porfolio de servicios, donde lo podemos asesorar en el análisis, diseño e implementación.     
+                Por estos motivos usted cuenta con DiracServices S.A. como socio tecnológico que te brinda un amplio porfolio de servicios, donde lo podemos asesorar en el análisis, diseño e implementación.     
             </p>
             <br></br>
         </article>
