--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     </aside>
     <div class="widget-1">
         <div class="maps">
-            <p>Lavalle 899</p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d821.0169206155089!2d-58.3812771707397!3d-34.602449994899196!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccacf2c383417%3A0xf1d26adec2f52d11!2sLavalle%20989%2C%20C1047%20AAS%2C%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1635627095326!5m2!1ses-419!2sar" width="300" height="150" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <p>Iguazu 341</p>
+            <iframe src="https://www.google.com/maps/dir/-34.6078662,-58.3831004/itba+sede+rectorado/@-34.6248043,-58.4114938,14z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x95a335326563a44b:0x687ed059ee29af95!2m2!1d-58.4063908!2d-34.6417149" width="300" height="150" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
     </div>
 
