--- a/contacto.html
+++ b/contacto.html
@@ -47,7 +47,7 @@
             <div class="col-md-3">
               <label for="validationDefault04" class="form-label">País:</label>
               <select class="form-select" id="validationDefault04" required>
-                <option selected disabled value="">Elige....</option>
+                <option selected disabled value="">Elige...</option>
                 <option>Argentina</option>
                 <option>Bolivia</option>
                 <option>Colombia</option>
