--- a/index.html
+++ b/index.html
@@ -48,15 +48,13 @@
     </main>
     <aside class="sidebar">
         <h3>Nuestros socios</h3>
-        <img src="img/img/fortinet.png" alt="Fortinet" width="300" height="200">
+        <img src="img/fortinet.png" alt="Fortinet" width="300" height="200">
         <br></br>
-        <img src="img/img/dell.png" alt="DELL" width="300" height="200">
+        <img src="img/dell.png" alt="DELL" width="300" height="200">
         <br></br>
-        <img src="img/img/amd.jpg" alt="AMD" width="300" height="200">
+        <img src="img/amd.jpg" alt="AMD" width="300" height="200">
         <br></br>
-        <img src="img/img/intel.png" alt="Intel" width="300" height="200">
-
-
+        <img src="img/intel.png" alt="Intel" width="300" height="200">
     </aside>
     <div class="widget-1">
         <div class="maps">
