--- a/index.html
+++ b/index.html
@@ -48,18 +48,20 @@
     </main>
     <aside class="sidebar">
         <h3>Nuestros socios</h3>
-        <img src="img/fortinet.png" alt="Fortinet" width="300" height="200">
+        <img src="img/img/fortinet.png" alt="Fortinet" width="300" height="200">
         <br></br>
-        <img src="img/dell.png" alt="DELL" width="300" height="200">
+        <img src="img/img/dell.png" alt="DELL" width="300" height="200">
         <br></br>
-        <img src="img/amd.jpg" alt="AMD" width="300" height="200">
+        <img src="img/img/amd.jpg" alt="AMD" width="300" height="200">
         <br></br>
-        <img src="img/intel.png" alt="Intel" width="300" height="200">
+        <img src="img/img/intel.png" alt="Intel" width="300" height="200">
+
+
     </aside>
     <div class="widget-1">
         <div class="maps">
             <p>Iguazu 341</p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.514199795664!2d-58.406390800000004!3d-34.6417149!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccb0d8395ba99%3A0xfd64cf2aabaec37a!2sIguaz%C3%BA%20341%2C%20C1437%20CABA!5e0!3m2!1ses-419!2sar!4v1653941330428!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/dir/-34.6078662,-58.3831004/itba+sede+rectorado/@-34.6248043,-58.4114938,14z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x95a335326563a44b:0x687ed059ee29af95!2m2!1d-58.4063908!2d-34.6417149" width="300" height="150" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
     </div>
 
