--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="widget-2">
         <div class="Video">
             <p>Importancia del mantenimiento de computadoras</p>
-            <iframe width="300" height="150" src="https://www.youtube.com/watch?v=tF-wkzh3hk8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/tF-wkzh3hk8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
 
