--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 
     <div class="widget-2">
         <div class="Video">
-            <p>Importancia del mantenimiento de computadoras</p>
-            <iframe width="300" height="150" src="https://www.youtube.com/embed/tF-wkzh3hk8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>Importancia del uso de la tecnología</p>
+            <iframe width="300" height="150" src="https://www.youtube.com/embed/z0YO1PAtn1A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
 
