--- a/index.html
+++ b/index.html
@@ -47,14 +47,13 @@
     </article>
     </main>
     <aside class="sidebar">
-        <h3>Nuestros socios</h3>
+        <h3>Nuestros socios</h3> <br> <br> 
         <img src="img/img/fortinet.png" alt="Fortinet" width="300" height="200">
         <br></br>
         <img src="img/img/dell.png" alt="DELL" width="300" height="200">
         <br></br>
         <img src="img/img/amd.jpg" alt="AMD" width="300" height="200">
-        <br></br>
-        <img src="img/img/intel.png" alt="Intel" width="300" height="200">
+        <br><br>
 
 
     </aside>
