--- a/contacto.html
+++ b/contacto.html
@@ -88,14 +88,13 @@
 
     
     <aside class="sidebar">
-      <h3>Nuestros socios</h3>
+      <h3>Nuestros socios</h3> <br> <br> 
         <img src="img/img/fortinet.png" alt="Fortinet" width="300" height="200">
         <br></br>
         <img src="img/img/dell.png" alt="DELL" width="300" height="200">
         <br></br>
         <img src="img/img/amd.jpg" alt="AMD" width="300" height="200">
-        <br></br>
-        <img src="img/img/intel.png" alt="Intel" width="300" height="150">
+        <br><br>
       </div>
     </aside>
 
