--- a/contacto.html
+++ b/contacto.html
@@ -88,7 +88,7 @@
 
     
     <aside class="sidebar">
-      <h3>Nuestros socios</h3> <br> <br> 
+      <h3>Nuestros socios</h3> <br> 
         <img src="img/img/fortinet.png" alt="Fortinet" width="300" height="200">
         <br></br>
         <img src="img/img/dell.png" alt="DELL" width="300" height="200">
