--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     
     <div class="widget-1">
         <div class="maps">
-            <p>Iguazu 341</p>
+            <p>Ubicacion de la empresa</p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.514199795664!2d-58.406390800000004!3d-34.6417149!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccb0d8395ba99%3A0xfd64cf2aabaec37a!2sIguaz%C3%BA%20341%2C%20C1437%20CABA!5e0!3m2!1ses-419!2sar!4v1653941705644!5m2!1ses-419!2sar" width="300" height="150" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
     </div>
