--- a/contacto.html
+++ b/contacto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tu soporte técnico</title>
+    <title>DiracServices - Tu soporte técnico</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,7 @@
 <body>
 <section class="conteiner1">
     <div class="header">
-        <h1 class="title"><span class="color-icon"><i class="fas fa-laptop"></span></i> SystemSupport - Tu soporte técnico </h1>
+        <h1 class="title"><span class="color-icon"><i class="fas fa-laptop"></span></i> DiracServices - Tu soporte técnico </h1>
     </div>
     <div class="logon-cont">
         <img src="img/img/fondo3.jpg" alt="" width="500" height="500">
