--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 <section class="conteiner1">
     <div class="header">
-        <h1 class="title"><span class="color-icon"><i class="fas fa-laptop"></span></i> SystemSupport - Tu soporte técnico </h1>
+        <h1 class="title"><span class="color-icon"><i class="fas fa-laptop"></span></i> DiracServices - Tu soporte técnico </h1>
     </div>
     <div class="logon">
         <img src="img/img/fondo2.jpg" alt="" width="500" height="500">
