--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h1 class="ml1">
             <span class="text-wrapper">
               <span class="line line1"></span>
-              <span class="letters"><h1>Bienvenidos....</h1></span>
+              <span class="letters"><h1>Bienvenidos...</h1></span>
               <span class="line line2"></span>
             </span>
           </h1>
