--- a/contacto.html
+++ b/contacto.html
@@ -102,7 +102,7 @@
 
     <footer class="footer">
         <a href="https://www.instagram.com/martingardella_/" class="fa fa-instagram"></a> 
-        <p>Diseñado por Martín Gardella - DiracServices</p>
+        <p>DiracServices - Diseñado por Martín Gardella</p>
     </footer>
 
     
