--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <article>
         <h3 class="mision"> Nuestra mision...</h3>
         <br></br>
-        <p>Somos una empresa que se encarga de brindar servicios de comunicaciones, energias renovables  y pantallas interactivas. Nuestra forma de operar es mediante el uso de la mas nueva tecnologia, creemos que así es la forma de manejarse en el siglo XXI. Es por esto que cuando usted se contacte con DiracServices tendrá la certeza que nuestra respuesta sera la mas optima para su problema.</p>
+        <p>Somos una empresa que se encarga de brindar servicios de comunicaciones, energias renovables  y pantallas interactivas. Nuestra forma de operar es mediante el uso de la mas nueva tecnología, creemos que así es la forma de manejarse en el siglo XXI. Es por esto que cuando usted se contacte con DiracServices tendrá la certeza que nuestra respuesta sera la mas optima para su problema.</p>
         <br></br>
         <p>Maecenas pharetra pretium quam ut posuere. Quisque luctus sem purus. Phasellus vel nibh sed erat interdum placerat eget a dui. Vivamus viverra pharetra congue. Sed pretium mi eu dui congue pulvinar. Donec felis risus, malesuada quis tristique faucibus, vestibulum non urna. Fusce nec orci pulvinar, blandit velit quis, finibus neque. Mauris malesuada metus eget ornare pellentesque. Nunc pharetra ante eget ullamcorper finibus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla maximus a dolor non condimentum. Suspendisse convallis ullamcorper justo.</p>
         <br></br>
