--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </h1>
           <script src="js/letters.js"></script>
     <article>
-        <h3 class="mision"> Nuestra mision...</h3>
+        <h3 class="mision"> Nuestra misión...</h3>
         <br></br>
         <p>Somos una empresa que se encarga de brindar servicios de comunicaciones, energias renovables  y pantallas interactivas. Nuestra forma de operar es mediante el uso de la mas nueva tecnología, creemos que así es la forma de manejarse en el siglo XXI. Es por esto que cuando usted se contacte con DiracServices tendrá la certeza que nuestra respuesta sera la mas optima para su problema.</p>
         <br></br>
