--- a/servicios.html
+++ b/servicios.html
@@ -29,19 +29,18 @@
     <main class="contenido">
         <h1 class="ml1">
             <span class="text-wrapper">
-              <span class="line line1"></span>
-              <span class="letters">Servicios</span>
-              <span class="line line2"></span>
+                <span class="line line1"></span>
+                <span class="letters">Servicios</span>
+                <span class="line line2"></span>
             </span>
           </h1>
           <script src="js/letters.js"></script>
         <article>
-            <p>
-                Hoy en día los continuos avances tecnológicos hacen que sea imposible para muchas organizaciones contar con un equipo técnico capaz de desarrollar proyectos en las últimas tecnologías con unos costos razonables. Si a esto unimos la urgencia de la implementación y la tendencia cada vez mayor de optimizar los recursos de los departamentos de comunicaciones resulta vital contar con un proveedor que le garantice el éxito de sus proyectos.
+            <p> Hoy en día los continuos avances tecnológicos hacen que sea imposible para muchas organizaciones contar con un equipo técnico capaz de desarrollar proyectos en las últimas tecnologías con unos costos razonables. Si a esto unimos la urgencia de la implementación y la tendencia cada vez mayor de optimizar los recursos de los departamentos de comunicaciones resulta vital contar con un proveedor que le garantice el éxito de sus proyectos.
                 <br></br>
                 Por estos motivos usted cuenta con DiracServices S.A. como socio tecnológico que le brinda un amplio porfolio de servicios, donde lo podemos asesorar en el análisis, diseño e implementación.     
             </p>
-            <br></br>
+                <br></br>
         </article>
         <img src="img/img/icon-comunicacion.jpg" width="600" height="300" class="responsive"></img>
         <h2 class="servcom">SERVICIOS EN COMUNICACIONES</h2>
@@ -56,30 +55,30 @@
                 <li>Cableado Estructurado</li>
                 <li>Desarrollo de Proyectos</li>             
             </p>
-            <br></br>
+                <br></br>
         </article>
         <img src="img/img/icon-serviciosener.jpg" width="600" height="300" class="responsive"></img>
         <h2 class="servener">SERVICIOS EN ENERGIAS RENOVABLES</h2>
         <br></br>
         <article>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, et nostrum consectetur omnis esse quos corporis aliquam dolor dolorum ipsam ex repellat iusto id? Veniam, eius explicabo? Pariatur, a veritatis.
-            <br></br>
-            <li>Asesoramiento en proyectos</li>
-            <li>Mediciones de consumo</li>
-            <li>Instalaciones</li>
-        </p>
-        <br></br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, et nostrum consectetur omnis esse quos corporis aliquam dolor dolorum ipsam ex repellat iusto id? Veniam, eius explicabo? Pariatur, a veritatis.
+                <br></br>
+                <li>Asesoramiento en proyectos</li>
+                <li>Mediciones de consumo</li>
+                <li>Instalaciones</li>
+            </p>
+                <br></br>
         </article>
         <img src="img/img/icon-pantallas.png" width="600" height="300" class="responsive"></img>
         <h2 class="servpant">SERVICIOS EN PANTALLAS INTERACTIVAS</h2>
         <br></br>
         <article>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias animi omnis culpa non excepturi cum ipsam laudantium harum quam dolor. Iure deleniti praesentium voluptatum nisi voluptatem minus architecto, doloremque excepturi?
-        <br></br>
-        <li>Capacitación de usuarios</li>
-        <li>Servicio post venta</li>
-    </p>
-    </article>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias animi omnis culpa non excepturi cum ipsam laudantium harum quam dolor. Iure deleniti praesentium voluptatum nisi voluptatem minus architecto, doloremque excepturi?
+                <br></br>
+                <li>Capacitación de usuarios</li>
+                <li>Servicio post venta</li>
+            </p>
+        </article>
     </main>
     <aside class="sidebar">
         <h3>Nuestros socios</h3> <br> <br> 
